--- a/package.json
+++ b/package.json
@@ -1,51 +1,52 @@
 {
-  "name": "mockserver-client",
-  "description": "A node client for the MockServer",
-  "version": "0.0.4",
-  "homepage": "https://github.com/jamesdbloom/mockserver",
-  "author": {
-    "name": "James Bloom",
-    "email": "jamesdbloom@gmail.com",
-    "url": "http://mock-server.com"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/jamesdbloom/mockserver-client-node.git"
-  },
-  "bugs": {
-    "url": "https://github.com/jamesdbloom/mockserver-client-node/issues"
-  },
-  "licenses": [
-    {
-      "type": "Apache",
-      "url": "https://raw.githubusercontent.com/jamesdbloom/mockserver/master/license.txt"
+    "name": "mockserver-client",
+    "description": "A node client for the MockServer",
+    "version": "1.0.0",
+    "homepage": "https://github.com/jamesdbloom/mockserver",
+    "author": {
+        "name": "James Bloom",
+        "email": "jamesdbloom@gmail.com",
+        "url": "http://mock-server.com"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/jamesdbloom/mockserver-client-node.git"
+    },
+    "bugs": {
+        "url": "https://github.com/jamesdbloom/mockserver-client-node/issues"
+    },
+    "licenses": [
+        {
+            "type": "Apache",
+            "url": "https://raw.githubusercontent.com/jamesdbloom/mockserver/master/license.txt"
+        }
+    ],
+    "engines": {
+        "node": ">= 0.8.0"
+    },
+    "scripts": {
+        "test": "grunt"
+    },
+    "devDependencies": {
+        "grunt": "~0.4",
+        "grunt-contrib-clean": "~0.6",
+        "grunt-contrib-jshint": "~0.10",
+        "grunt-contrib-nodeunit": "~0.4",
+        "grunt-run-node": "~0.1",
+        "mockserver-grunt": "~1.0",
+        "nodeunit": "~0.9",
+        "sinon": "~1.10"
+    },
+    "peerDependencies": {
+        "grunt": "~0.4"
+    },
+    "keywords": [
+        "mockserver",
+        "client",
+        "gruntplugin"
+    ],
+    "dependencies": {
+        "q": "^1.0.1",
+        "request": "^2.47.0"
     }
-  ],
-  "engines": {
-    "node": ">= 0.8.0"
-  },
-  "scripts": {
-    "test": "grunt"
-  },
-  "devDependencies": {
-    "grunt": "~0.4",
-    "grunt-contrib-clean": "~0.6",
-    "grunt-contrib-jshint": "~0.10",
-    "grunt-contrib-nodeunit": "~0.4",
-    "grunt-run-node": "~0.1",
-    "mockserver-grunt": "~1.0",
-    "nodeunit": "~0.9",
-    "sinon": "~1.10"
-  },
-  "peerDependencies": {
-    "grunt": "~0.4"
-  },
-  "keywords": [
-    "mockserver",
-    "client"
-  ],
-  "dependencies": {
-    "q": "^1.0.1",
-    "request": "^2.47.0"
-  }
 }
