trying to fix bower config

--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,10 @@
         "Gruntfile.js",
         "*.iml"
     ],
+    "dependencies": {
+        "q": "~1.0",
+        "request": "~2.47"
+    },
     "moduleType": [
         "node"
     ]
