--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "mockserver-client",
     "description": "A node client for the MockServer",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "homepage": "https://github.com/jamesdbloom/mockserver",
     "author": {
         "name": "James Bloom",
@@ -33,7 +33,8 @@
         "grunt-contrib-jshint": "~0.10",
         "grunt-contrib-nodeunit": "~0.4",
         "grunt-run-node": "~0.1",
-        "mockserver-grunt": "~1.0",
+        "grunt-exec": "~0.4",
+        "mockserver-grunt": "~1",
         "nodeunit": "~0.9"
     },
     "peerDependencies": {
@@ -45,7 +46,6 @@
         "gruntplugin"
     ],
     "dependencies": {
-        "q": "~1.1",
-        "request": "~2.48"
+        "q": "~1.1"
     }
 }
