--- a/package.json
+++ b/package.json
@@ -15,12 +15,7 @@
     "bugs": {
         "url": "https://github.com/jamesdbloom/mockserver-client-node/issues"
     },
-    "licenses": [
-        {
-            "type": "Apache",
-            "url": "https://raw.githubusercontent.com/jamesdbloom/mockserver/master/license.txt"
-        }
-    ],
+    "license": "Apache-2.0",
     "engines": {
         "node": ">= 0.8.0"
     },
@@ -33,9 +28,9 @@
         "grunt-contrib-jshint": "~1.0",
         "grunt-contrib-nodeunit": "~1.0",
         "grunt-run-node": "~0.1",
-        "grunt-exec": "~0.4",
+        "grunt-exec": "~1.0",
         "mockserver-grunt": "~1",
-        "nodeunit": "~0.9"
+        "nodeunit": "~0.10"
     },
     "peerDependencies": {
         "grunt": "~1.0"
