--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "mockserver-client",
     "description": "A node client for the MockServer",
-    "version": "1.0.11",
+    "version": "1.0.12",
     "homepage": "https://github.com/jamesdbloom/mockserver",
     "author": {
         "name": "James Bloom",
@@ -23,17 +23,16 @@
         "test": "grunt"
     },
     "devDependencies": {
-        "grunt": "~1.0",
+        "grunt": ">=0.4",
         "grunt-contrib-clean": "~1.0",
         "grunt-contrib-jshint": "~1.0",
         "grunt-contrib-nodeunit": "~1.0",
-        "grunt-run-node": "~0.1",
         "grunt-exec": "~1.0",
         "mockserver-grunt": "~1",
         "nodeunit": "~0.10"
     },
     "peerDependencies": {
-        "grunt": "~1.0"
+        "grunt": ">=0.4"
     },
     "keywords": [
         "mockserver",
