--- a/package.json
+++ b/package.json
@@ -25,17 +25,17 @@
     "grunt-contrib-jshint": "~1.1",
     "grunt-contrib-nodeunit": "~1.0",
     "grunt-exec": "~2.0",
-    "grunt-jasmine-runner": "^0.6.0",
-    "grunt-karma": "^2.0.0",
-    "grunt-webdriver-jasmine-runner": "^0.3.9",
-    "jasmine-core": "^2.5.2",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-firefox-launcher": "^1.0.0",
-    "karma-jasmine": "^1.0.2",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-safari-launcher": "^1.0.0",
-    "karma-spec-reporter": "0.0.26",
+    "grunt-jasmine-runner": "~0.6",
+    "grunt-karma": "~2.0",
+    "grunt-webdriver-jasmine-runner": "~0.3",
+    "jasmine-core": "~2.5",
+    "karma": "~1.3",
+    "karma-chrome-launcher": "~2.0",
+    "karma-firefox-launcher": "~1.0",
+    "karma-jasmine": "~1.0",
+    "karma-phantomjs-launcher": "~1.0",
+    "karma-safari-launcher": "~1.0",
+    "karma-spec-reporter": "~0.0",
     "mockserver-grunt": "~1.0",
     "nodeunit": "~0.11"
   },
