--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "karma-safari-launcher": "~1.0",
     "karma-spec-reporter": "~0.0",
     "karma-xvfb-chrome-launcher": "0.0.1",
-    "mockserver-grunt": "~1.0",
+    "mockserver-node": "~1.1",
     "nodeunit": "~0.11"
   },
   "keywords": [
