--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mockserver-client",
   "description": "A node client for the MockServer",
-  "version": "5.3.0",
+  "version": "5.4.1",
   "homepage": "https://github.com/jamesdbloom/mockserver",
   "author": {
     "name": "James Bloom",
@@ -20,23 +20,23 @@
     "node": ">= 0.8.0"
   },
   "devDependencies": {
-    "grunt": ">=0.4",
-    "grunt-contrib-clean": "~1.1",
-    "grunt-contrib-jshint": "~1.1",
-    "grunt-contrib-nodeunit": "~1.0",
+    "grunt": "^1.0.3",
+    "grunt-contrib-clean": "~2.0",
+    "grunt-contrib-jshint": "~2.0",
+    "grunt-contrib-nodeunit": "~2.0",
     "grunt-exec": "~3.0",
     "grunt-jasmine-runner": "~0.6",
-    "grunt-karma": "~2.0",
-    "jasmine-core": "~2.8",
-    "karma": "~1.3",
+    "grunt-karma": "~3.0",
+    "jasmine-core": "~3.3",
+    "karma": "~3.1",
     "karma-chrome-launcher": "~2.2",
-    "karma-firefox-launcher": "~1.0",
+    "karma-firefox-launcher": "~1.1",
+    "karma-jasmine": "^1.1.2",
     "karma-safari-launcher": "~1.0",
+    "karma-spec-reporter": "0.0.32",
     "karma-xvfb-chrome-launcher": "0.0.1",
-    "karma-jasmine": "~1.1",
-    "karma-spec-reporter": "~0.0",
-    "mockserver-node": "5.3.0",
-    "nodeunit": "~0.11"
+    "mockserver-node": "5.4.1",
+    "nodeunit": "^0.11.3"
   },
   "keywords": [
     "mockserver",
@@ -45,6 +45,6 @@
   ],
   "dependencies": {
     "q": "~2.0",
-    "websocket": "~1.0"
+    "websocket": "^1.0.28"
   }
 }
