--- a/.jshintrc
+++ b/.jshintrc
@@ -9,5 +9,10 @@
   "undef": true,
   "boss": true,
   "eqnull": true,
-  "node": true
+  "node": true,
+  "globals": {
+    "window": true,
+    "WebSocket": true,
+    "XMLHttpRequest": true
+  }
 }
