--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,8 +1,8 @@
 steps:
   - label: "update docker image"
-    command: "docker pull jamesdbloom/mockserver:grunt"
+    command: "docker pull mockserver/mockserver:grunt"
 
   - wait
 
   - label: "build"
-    command: "docker run -v /var/lib/buildkite-agent/builds/$BUILDKITE_AGENT_NAME/mockserver:/build -w /build/mockserver-client-node -a stdout -a stderr jamesdbloom/mockserver:grunt /build/mockserver-client-node/scripts/buildkite_quick_build.sh"
+    command: "docker run -v /var/lib/buildkite-agent/builds/$BUILDKITE_AGENT_NAME/mockserver:/build -w /build/mockserver-client-node -a stdout -a stderr mockserver/mockserver:grunt /build/mockserver-client-node/scripts/buildkite_quick_build.sh"
