Add typings for both the client and server

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "gruntplugin"
   ],
   "dependencies": {
+    "grunt-ts": "^6.0.0-beta.22",
     "q": "~2.0",
     "websocket": "^1.0.30"
   }
