--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   ],
   "dependencies": {
     "grunt-ts": "^6.0.0-beta.22",
+    "json-schema-to-typescript": "^9.1.0",
     "q": "~2.0",
     "websocket": "^1.0.30"
   }
