--- a/package.json
+++ b/package.json
@@ -32,21 +32,21 @@
     "stop_MockServer.sh"
   ],
   "devDependencies": {
-    "grunt": "^1.0.3",
-    "grunt-contrib-clean": "~2.0",
-    "grunt-contrib-jshint": "~3.0",
-    "grunt-contrib-nodeunit": "~2.1",
-    "grunt-exec": "~3.0",
-    "grunt-karma": "~4.0",
-    "jasmine-core": "~4.0",
-    "karma": "^5.2.2",
-    "karma-chrome-launcher": "~3.1",
-    "karma-firefox-launcher": "~2.1",
-    "karma-jasmine": "~4.0",
-    "karma-spec-reporter": "0.0.32",
-    "karma-xvfb-chrome-launcher": "0.0.1",
-    "mockserver-node": "5.11.2",
-    "nodeunit": "^0.11.3"
+    "grunt": "~1.4.1",
+    "grunt-contrib-clean": "~2.0.0",
+    "grunt-contrib-jshint": "~3.1.1",
+    "grunt-contrib-nodeunit": "~4.0.0",
+    "grunt-exec": "~3.0.0",
+    "nodeunit": "~0.11.3",
+    "mockserver-node": "~5.11.2",
+    "grunt-karma": "~4.0.2",
+    "jasmine-core": "~4.0.0",
+    "karma": "~6.3.11",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-firefox-launcher": "~2.1.2",
+    "karma-jasmine": "~4.0.1",
+    "karma-spec-reporter": "~0.0.32",
+    "karma-xvfb-chrome-launcher": "~0.0.1"
   },
   "keywords": [
     "mockserver",
@@ -54,9 +54,9 @@
     "gruntplugin"
   ],
   "dependencies": {
-    "browser-or-node": "^1.3.0",
-    "grunt-ts": "^6.0.0-beta.22",
+    "browser-or-node": "^2.0.0",
+    "grunt-ts": "~6.0.0-beta.22",
     "q": "~2.0",
-    "websocket": "^1.0.30"
+    "websocket": "~1.0.34"
   }
 }
