--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "grunt-contrib-nodeunit": "~4.0.0",
     "grunt-exec": "~3.0.0",
     "grunt-karma": "~4.0.2",
+    "grunt-ts": "~6.0.0-beta.22",
+    "typescript": "~4.6.2",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.11",
     "karma-chrome-launcher": "~3.1.0",
@@ -55,7 +57,6 @@
   ],
   "dependencies": {
     "browser-or-node": "^2.0.0",
-    "grunt-ts": "~6.0.0-beta.22",
     "q": "~2.0",
     "websocket": "~1.0.34"
   }
