--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mockserver-client",
   "description": "A node client for the MockServer",
-  "version": "5.13.0",
+  "version": "5.13.1",
   "homepage": "http://mock-server.com",
   "author": {
     "name": "James Bloom",
@@ -32,14 +32,12 @@
     "stop_MockServer.sh"
   ],
   "devDependencies": {
-    "grunt": "~1.4.1",
     "grunt-contrib-clean": "~2.0.0",
     "grunt-contrib-jshint": "~3.2.0",
     "grunt-contrib-nodeunit": "~4.0.0",
     "grunt-exec": "~3.0.0",
     "grunt-karma": "~4.0.2",
-    "grunt-ts": "~6.0.0-beta.22",
-    "typescript": "~4.6.2",
+    "grunt-ts": "^4.0.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.11",
     "karma-chrome-launcher": "~3.1.0",
@@ -47,8 +45,9 @@
     "karma-jasmine": "~4.0.1",
     "karma-spec-reporter": "~0.0.33",
     "karma-xvfb-chrome-launcher": "~0.0.1",
-    "mockserver-node": "~5.13.0",
-    "nodeunit": "^0.11.3"
+    "mockserver-node": "~5.13.1",
+    "nodeunit": "^0.9.2",
+    "typescript": "~4.6.2"
   },
   "keywords": [
     "mockserver",
