updated dev dependencies and enabled CORS support for Karma chrome tests

--- a/.jshintrc
+++ b/.jshintrc
@@ -13,6 +13,14 @@
   "globals": {
     "window": true,
     "WebSocket": true,
-    "XMLHttpRequest": true
+    "XMLHttpRequest": true,
+    "HttpRequest": true,
+    "jasmine": true,
+    "expect": true,
+    "describe": true,
+    "beforeEach": true,
+    "afterEach": true,
+    "it": true,
+    "navigator": true
   }
 }
